--- a/public/css/style.css
+++ b/public/css/style.css
@@ -180,6 +180,15 @@ a.gtr-link:active {
   padding-left: .5rem !important;
   line-height: 2.75rem !important;
 }
+.gtr-input-sm {
+  border: 2px solid #2660ff !important;
+  border-radius: 5px !important;
+  height: 2.75rem !important;
+  color: #333 !important;
+  font-size: 1rem !important;
+  padding-left: .5rem !important;
+  line-height: 2.75rem !important;
+}
 
 .gtr-modal-header {
   background-color: #2660ff;
