--- a/views/payment.pug
+++ b/views/payment.pug
@@ -40,11 +40,11 @@ block content
             .card.col-6
                 .card-header İletişim
                 .card-body
-                    .d-flex.mb-2.justify-content-around.gap-3
-                        .col-6
+                    .d-flex.mb-2.justify-content-around
+                        .col-6.px-3
                             label.form-label(for="") E-mail
                             input.gtr-input-sm.w-100(type="text")
-                        .col-6
+                        .col-6.px-3
                             label.form-label(for=`passenger-phone`) Telefon
                             input.gtr-input-sm.w-100(
                                 type="tel"
